fix: reduce paddings in application card  to prevent delete button overflow

--- a/client/src/components/ApplicationCard.css
+++ b/client/src/components/ApplicationCard.css
@@ -4,6 +4,9 @@
     border: black solid 2px;
     border-radius: 10px !important;
     margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    /* height: 100%; */
 }
 
 
